<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center_vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/agricom_logo"
            android:src="@drawable/agricom_circle_logo_2" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:autofillHints=""
            android:hint="@string/username"
            android:textColorHint="@color/white_off"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:padding="8dp"
            android:inputType="text"
            android:id="@+id/username_input"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:hint="@string/password"
            android:textColorHint="@color/white_off"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:padding="8dp"
            android:inputType="textPassword"
            android:id="@+id/password_input"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:padding="18dp"
            android:layout_marginTop="32dp"
            android:textSize="20sp"
            android:id="@+id/login_btn"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/does_not_have_an_account"
                android:clickable="true"
                android:textSize="18sp"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/register_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_here"
                android:clickable="true"
                android:textSize="18sp"
                android:textColor="#FFFFFF"
                android:layout_marginStart="5dp"/>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>