<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!--Search Bar-->
    <LinearLayout
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:layout_margin="16dp"
        android:paddingHorizontal="12dp"
        android:gravity="center_vertical">

        <!-- Search Icon -->
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/search_icon"
            android:src="@android:drawable/ic_menu_search"
            app:tint="#757575" />

        <!-- Input Field -->
        <EditText
            android:id="@+id/search_input"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/search_people_to_message"
            android:background="@android:color/transparent"
            android:paddingStart="8dp"
            android:textSize="14sp"
            android:inputType="textPersonName"
            android:imeOptions="actionSearch"
            tools:ignore="RtlSymmetry" />

        <!-- Clear Button -->
        <ImageView
            android:id="@+id/clear_search"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/clear_search"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:visibility="gone"
            app:tint="#757575" />
    </LinearLayout>

    <!--Most Recent Label-->
    <TextView
        android:id="@+id/most_recent_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/most_recent"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:layout_below="@id/search_bar"
        android:textColor="@color/black"/>

    <!--List of Conversations-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chat_list_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/most_recent_label"
        android:padding="16dp"/>
</RelativeLayout>
